[package]
name = "uguu"
version = "1.0.0"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]
description = 'Plays an "uguu~" sound effect. Useful for testing.'
readme = "README.md"
keywords = ["uguu"]
categories = ["multimedia::audio"]
edition = "2018"

[dependencies.rodio]
version = "0.8.1"
default-features = false
features = ["mp3"]
